@startuml
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 60
skinparam ranksep 70
skinparam dpi 160
left to right direction
title STUDY2WORK - AUTH Module

package "AUTH" {
  together {
    entity "users" as users {
      * id : BIGINT
      --
      full_name : VARCHAR
      email : VARCHAR
      phone : VARCHAR
      password_hash : VARCHAR
      primary_role : VARCHAR
      status : VARCHAR
      created_at : DATETIME
      updated_at : DATETIME
    }

    entity "roles" as roles {
      * id : BIGINT
      --
      code : VARCHAR
      name : VARCHAR
    }

    entity "user_roles" as user_roles {
      * user_id : BIGINT
      * role_id : BIGINT
      --
      assigned_at : DATETIME
    }

    entity "user_profiles" as user_profiles {
      * user_id : BIGINT
      --
      headline : VARCHAR
      bio : TEXT
      location : VARCHAR
      website_url : VARCHAR
      github_url : VARCHAR
      linkedin_url : VARCHAR
      education_level : VARCHAR
      years_experience : TINYINT
      skills_summary : TEXT
    }

    entity "user_verification_tokens" as user_verification_tokens {
      * id : BIGINT
      --
      user_id : BIGINT
      token_type : VARCHAR
      token_hash : VARCHAR
      sent_to : VARCHAR
      expires_at : DATETIME
      used_at : DATETIME
    }

    entity "user_sessions" as user_sessions {
      * id : BIGINT
      --
      user_id : BIGINT
      refresh_token_hash : VARCHAR
      device_name : VARCHAR
      expires_at : DATETIME
      revoked_at : DATETIME
    }

    entity "notifications" as notifications {
      * id : BIGINT
      --
      user_id : BIGINT
      type : VARCHAR
      title : VARCHAR
      message : TEXT
      entity_type : VARCHAR
      entity_id : BIGINT
      is_read : BOOLEAN
    }

    entity "admin_audit_logs" as admin_audit_logs {
      * id : BIGINT
      --
      actor_user_id : BIGINT
      action : VARCHAR
      entity_type : VARCHAR
      entity_id : BIGINT
      before_data : JSON
      after_data : JSON
      created_at : DATETIME
    }
  }
}

users ||--o{ user_roles
roles ||--o{ user_roles
users ||--|| user_profiles
users ||--o{ user_verification_tokens
users ||--o{ user_sessions
users ||--o{ notifications
users ||--o{ admin_audit_logs : actor

@enduml
